<?xml version="1.0"?>
<package format="3">
  <name>tracker_pkg</name>
  <version>0.0.1</version>
  <description>ROS 2 tracker package with YOLO and tracking nodes</description>

  <maintainer email="kawawaki-yuki628@g.ecc.u-tokyo.ac.jp">Yuki Kawawaki</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>